fixed error selectors

--- a/src/components/ModalApproveAction/ModalApproveAction.module.css
+++ b/src/components/ModalApproveAction/ModalApproveAction.module.css
@@ -10,12 +10,13 @@
   /* justify-content: center; */
   align-items: center;
   padding: 40px 28px;
-  width: calc(335px - 28px - 28px);
+  min-width: 295px;
+  /* width: calc(335px - 28px - 28px); */
 }
 @media screen and (min-width: 768px) {
   .modalWrap {
     padding: 80px;
-    width: calc(448px - 160px);
+    /* width: calc(448px - 160px); */
   }
 }
 .iconImgContainer {
