--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -1,13 +1,20 @@
 .titleContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: start;
 }
 .title {
-  font-size: 48px;
+  font-size: 28px;
   font-weight: 700;
   line-height: 0.94;
 }
 @media screen and (min-width: 768px) {
+  .title {
+    font-size: 48px;
+  }
+}
+@media screen and (min-width: 1280px) {
   .title {
     font-size: 54px;
   }
