--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: 'Monroe', sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
