--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -13,21 +13,37 @@
     padding: 0 64px;
   }
 }
-.noResults {
-  color: var(--red-color);
-  font-size: 26px;
-  margin-top: 50px;
-  text-align: center;
-}
-.noFound.error {
-  color: var(--red-color);
-  margin-top: 50px;
-  font-size: 26px;
-}
+
 @media screen and (min-width: 768px) {
   .searchWrapper {
     display: flex;
     justify-content: space-between;
     margin-bottom: 44px;
+  }
+}
+.errorContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  text-align: center;
+  color: var(--female-color);
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5;
+  padding: 0 1rem;
+}
+@media (min-width: 768px) {
+  .errorContainer {
+    margin-top: 100px;
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .errorContainer {
+    margin-top: 120px;
+    font-size: 2rem;
   }
 }
