--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -37,82 +37,35 @@
   display: block;
 }
 
+.burgerIcon {
+  width: 32px;
+  height: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .burgerIcon {
+    width: 36px;
+    height: 36px;
+  }
+}
+
 @media screen and (min-width: 1280px) {
   .burgerIcon {
     display: none;
   }
 }
 
-.burgerMenu {
-  display: none;
-}
-
-@media screen and (max-width: 1279px) {
-  .burgerMenu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--main-color);
-    padding: 20px;
-    border-radius: 10px;
-  }
-}
-
-.menuList {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  justify-content: center;
-  color: var(--white-color);
-  border: 1px solid var(--border-color);
-  border-radius: 30px;
-  padding: 15px 20px;
-  transition: color 0.3s ease, border-color 0.3s ease;
-  font-size: 14px;
-  font-weight: 500;
-}
-
-@media screen and (min-width: 768px) {
-  .menuList {
-    flex-direction: row;
-    gap: 16px;
-  }
-}
-
-a.menuItem {
-  background: transparent;
-  font-weight: 500;
-  font-size: 16px;
-  padding: 15px 20px;
-  border-radius: 30px;
-  border: 1px solid #dad4d4;
-  transition: color 0.3s ease, border-color 0.3s ease;
-}
-
-.homeNav a.menuItem {
-  color: #fff;
-}
-
-.homeNav .menuItem:hover,
-.homeNav .menuItem:focus,
-.homeNav .menuItem:active {
-  border-color: #fff;
-}
-
-.otherNav a.menuItem {
-  color: #262626;
-}
-
-.otherNav .menuItem:hover,
-.otherNav .menuItem:focus,
-.otherNav .menuItem:active {
-  border-color: #f6b83d;
-}
-
 .icons {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+.whiteIcon .burgerIcon {
+  content: url('../../assets/icons/whiteBurger.svg');
+}
+
+.blackIcon .burgerIcon {
+  content: url('../../assets/icons/blackBurger.svg');
 }
 
 .circle {
@@ -133,24 +86,4 @@ a.menuItem {
 
 .authButtons {
   width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .headerNav {
-    display: flex;
-    gap: 8px;
-    margin-right: 16px;
-    align-items: center;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .headerNav {
-    margin-right: 0;
-  }
-  .menuList {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-  }
 }
