--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
 body {
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
+  /* height: 100hv; */
   font-size: 16px;
   font-style: normal;
   margin: 0;
