--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   min-width: 320px;
   margin: 0 auto;
-  /* padding: 20px; */
+  padding: 20px;
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
