--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -98,6 +98,7 @@ input.invalid + .togglePassword {
 }
 @media screen and (min-width: 768px) {
   .loginBtn {
+    margin-top: 48px;
     font-size: 16px;
     padding: 16px;
     font-size: 16px;
