--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -23,22 +23,6 @@
   }
 }
 
-/* .pageLogin {
-  display: grid;
-  min-width: 280px;
-  grid-template-columns: 1fr;
-  align-items: center;
-}
-@media (min-width: 768px) {
-  .pageLogin {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    column-gap: 12px;
-    padding: 0px 20px;
-    max-width: 1216px;
-    margin: 0 auto;
-  }
-}  */
 .containerLogin {
   display: flex;
   flex-direction: column;
@@ -61,7 +45,7 @@
   .containerLogin {
     max-width: 592px;
     height: 654px;
-    padding: 82px 84px;
+    padding: 120px 80px 85px 80px;
   }
 }
 
@@ -85,6 +69,7 @@
 }
 @media screen and (min-width: 768px) {
   .description {
+    margin-top: 15px;
     gap: 18px;
   }
 }
