--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -2,22 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 320px;
   padding: 20px;
   gap: 10px;
 }
 @media screen and (min-width: 768px) {
   .pageRegister {
     max-width: 704px;
-    /* padding: 32px; */
     gap: 16px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pageRegister {
+    max-width: 1216px;
     flex-direction: row;
-    gap: 32px;
-    width: 1216px;
-    /* margin: 0 auto; */
   }
 }
 
@@ -40,9 +38,9 @@
 }
 @media screen and (min-width: 1280px) {
   .container {
-    max-width: 592px;
+    width: 592px;
     height: 654px;
-    padding: 82px 84px;
+    padding: 60px 84px 60px 84px;
   }
 }
 .titleContainer {
