--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,85 +1,19 @@
-/* .layoutlayoutContainer {
+.layoutContainer {
   max-width: 375px;
   margin: 0 auto;
   padding: 0 16px;
 }
 
 @media (min-width: 768px) {
-  .layoutlayoutContainer {
+  .layoutContainer {
     width: 768px;
     padding: 0 32px;
   }
 }
 
 @media (min-width: 1400px) {
-  .layoutlayoutContainer {
+  .layouContainer {
     padding: 0 64px;
     width: 1440px;
-  }
-} */
-.layoutContainer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url(../../assets/imgs/mobile/main-mob@1x.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 100dvh;
-  flex-shrink: 0;
-}
-
-@media only screen and (min-width: 320px) and (min-resolution: 192dpi) {
-  .layoutContainer {
-    background-image: url(../../assets/imgs/mobile/main-mob@2x.jpg);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .layoutContainer {
-    background-image: url(../../assets/imgs/tablet/main-tablet@1x.jpg);
-  }
-}
-
-@media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
-  .layoutContainer {
-    background-image: url(../../assets/imgs/tablet/main-tablet@2x.jpg);
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .layoutContainer {
-    background-image: url(../../assets/imgs/desktop/main-desk@1x.jpg);
-  }
-}
-
-@media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
-  .layoutContainer {
-    background-image: url(../../assets/imgs/desktop/main-desk@2x.jpg);
-  }
-}
-.containerLogo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.logoMain {
-  background-image: url('../../assets/imgs/logo.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: scroll;
-  width: 190px;
-  height: 50px;
-}
-
-@media screen and (min-width: 768px) {
-  .logoMain {
-    width: 374px;
-    height: 100px;
   }
 }
