--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -48,40 +48,33 @@
   transform: translate(-50%, -50%);
 }
 
-.logoMain {
-  background-image: url('../../assets/imgs/logo.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: scroll;
-  width: 190px;
-  height: 50px;
+.logoText {
+  display: flex;
+  font-size: 2.6em;
+  align-self: center;
+  align-items: baseline;
+  font-weight: bolder;
+  line-height: 1;
+  color: var(--white-color);
+}
+
+.logoIcon {
+  width: 0.6em;
 }
 
 @media screen and (min-width: 768px) {
-  .logoMain {
-    width: 374px;
-    height: 100px;
+  .logoText {
+    font-size: 6em;
   }
 }
 
-.containerLogo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 .logoMain {
-  background-image: url('../../assets/imgs/logo.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: scroll;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 190px;
   height: 50px;
 }
-
 @media screen and (min-width: 768px) {
   .logoMain {
     width: 374px;
