corected mobile style pages

--- a/src/components/ContainerAdd/ContainerAdd.module.css
+++ b/src/components/ContainerAdd/ContainerAdd.module.css
@@ -6,7 +6,7 @@
   background-color: var(--main-color);
   border-radius: 30px;
   width: 100%;
-  background-image: url('../../assets/imgs/mobile/rectangle-mob@1x.png');
+  background-image: url('../src/assets/imgs/mobile/rectangle-mob@1x.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -19,7 +19,7 @@
     flex-shrink: 1;
     max-width: 704px;
     height: auto;
-    background-image: url('../../assets/imgs/tablet/rectangle-tablet@1x.png');
+    background-image: url('../src/assets/imgs/tablet/rectangle-tablet@1x.png');
   }
 }
 
@@ -28,7 +28,7 @@
     max-width: 592px;
 
     height: auto;
-    background-image: url('../../assets/imgs/desktop/rectangle-desk@1x.png');
+    background-image: url('../src/assets/imgs/desktop/rectangle-desk@1x.png');
   }
 }
 .petImage {
@@ -45,6 +45,6 @@
 @media screen and (min-width: 1280px) {
   .petImage {
     height: 664px;
-    max-width: 592px;
+    /* max-width: 592px; */
   }
 }
