--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -11,7 +11,7 @@
   .pageLogin {
     /* max-width: 704px; */
     width: 704px;
-    gap: 32px;
+    gap: 16px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -33,7 +33,7 @@
 @media screen and (min-width: 768px) {
   .containerLogin {
     /* max-width: 704px; */
-    width: 704px;
+    /* width: 704px; */
     height: 560px;
     border-radius: 60px;
     padding: 80px 140px 60px 140px;
