corected style media home

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,9 +1,9 @@
-.wrapper {
+/* .wrapper {
   display: flex;
   margin: 0 auto;
   flex-direction: column;
-  /* padding: 0 0px 10px 0px; */
-}
+} */
+/* padding: 0 0px 10px 0px; */
 /* @media screen and (min-width: 768px) {
   .wrapper {
     padding: 0 0px 10px 20px;
@@ -11,9 +11,10 @@
 } */
 /* @media screen and (min-width: 1280px) {
   .wrapper {
-    padding: 0 32px 10px 32px;
+    max-height: 686px;
   }
 } */
+/* padding: 160px 80px 160px 80px; */
 .home {
   display: flex;
   line-height: 0.6;
@@ -23,7 +24,6 @@
   min-width: 280px;
   margin: 0px 20px;
   min-height: 280px;
-  margin: 0px 20px;
   color: var(--white-color);
   padding: 10px 20px 20px 20px;
   /* padding: 60px 20px 50px; */
@@ -38,25 +38,27 @@
 }
 @media screen and (min-width: 768px) {
   .home {
-    margin: 0px 32px;
-    min-width: 704px;
+    /* margin: 0px 32px; */
+    /* width: 704px; */
+    padding-bottom: 25px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    height: 385px;
+    height: 303px;
   }
   .content {
     gap: 32px;
   }
 }
-@media screen and (max-width: 1280px) {
-  /* .content {
+/* @media screen and (max-width: 1280px) {
+  .content {
     padding: 12px 64px;
-  } */
-}
+  }
+} */
 @media screen and (min-width: 1280px) {
   .home {
     max-width: 1216px;
-    height: 270px;
+    max-height: 270px;
+    /* padding: 0px; */
   }
 }
 .title {
@@ -64,20 +66,21 @@
   font-size: 46px;
   font-weight: 700;
   line-height: 0.86;
-  margin-top: 14px;
+  /* margin-top: 14px; */
 }
 @media screen and (min-width: 768px) {
   .title {
     font-size: 80px;
     line-height: 77px;
-    margin-top: 57px;
+    /* margin-top: 57px; */
     /* margin-bottom: 32px; */
   }
 }
 @media screen and (min-width: 1280px) {
   .title {
     font-size: 90px;
-    margin-bottom: 16px;
+    margin-top: 0px;
+    /* margin-bottom: 16px; */
     width: 760px;
     height: 174px;
   }
@@ -102,7 +105,7 @@
     font-size: 18px;
     line-height: 1.22;
     display: flex;
-    margin-bottom: 32px;
+    /* margin-bottom: 32px; */
     align-self: flex-end;
     width: 255px;
   }
