--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,15 +3,15 @@
   min-width: 280px;
   margin: 10px 20px 0 20px;
 }
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .wrapperHome {
     margin: 16px 22px 0px 32px;
     padding: 0px 10px 0px 0px;
   }
-}
+} */
 @media screen and (min-width: 1280px) {
   .wrapperHome {
-    margin: 0px auto;
+    /* margin: 0px auto; */
     margin-top: 16px;
     padding: 0px;
     max-width: 1216px;
