--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -9,8 +9,9 @@
 }
 @media screen and (min-width: 768px) {
   .pageLogin {
+    /* padding: 32px; */
     /* max-width: 704px; */
-    width: 704px;
+    /* width: 704px; */
     gap: 16px;
   }
 }
@@ -18,6 +19,7 @@
   .pageLogin {
     max-width: 1216px;
     flex-direction: row;
+    /* gap: 32px; */
   }
 }
 
