--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -9,7 +9,7 @@
 @media screen and (min-width: 768px) {
   .pageRegister {
     /* max-width: 704px; */
-    width: 704px;
+    /* width: 704px; */
     gap: 16px;
   }
 }
