--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -40,7 +40,7 @@
   .home {
     /* margin: 0px 32px; */
     /* width: 704px; */
-    padding-bottom: 25px;
+    padding-top: 0px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
     height: 303px;
@@ -58,7 +58,7 @@
   .home {
     max-width: 1216px;
     max-height: 270px;
-    /* padding: 0px; */
+    padding: 0px;
   }
 }
 .title {
@@ -150,7 +150,7 @@
   .photo {
     background-image: url('../src/assets/imgs/tablet/home-tablet@1x.jpg');
     border-radius: 60px;
-    margin: 0px 32px 16px 32px;
+    /* margin: 0px 32px 16px 32px; */
     min-width: 704px;
     height: 496px;
   }
