--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -45,9 +45,9 @@
     border-bottom-right-radius: 60px;
     height: 303px;
   }
-  .content {
+  /* .content {
     gap: 32px;
-  }
+  } */
 }
 /* @media screen and (max-width: 1280px) {
   .content {
@@ -151,8 +151,8 @@
     background-image: url('../src/assets/imgs/tablet/home-tablet@1x.jpg');
     border-radius: 60px;
     /* margin: 0px 32px 16px 32px; */
-    min-width: 704px;
-    height: 496px;
+    /* min-width: 704px;
+    height: 496px; */
   }
 }
 @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
@@ -164,7 +164,7 @@
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@1x.jpg');
     width: 1216px;
-    max-height: 384px;
+    /* max-height: 384px; */
   }
 }
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
