--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -6,10 +6,12 @@
   background-image: url(../src/assets/imgs/mobile/main-mob@1x.jpg);
   background-size: cover;
   background-position: center;
+  object-fit: contain;
   background-repeat: no-repeat;
   width: 100vw;
   height: 100dvh;
-  flex-shrink: 0;
+
+  flex-grow: 0;
 }
 
 @media only screen and (min-width: 320px) and (min-resolution: 192dpi) {
@@ -33,6 +35,7 @@
 @media screen and (min-width: 1280px) {
   .mainContainer {
     background-image: url(../src/assets/imgs/desktop/main-desk@1x.jpg);
+    /* width: 1261px; */
   }
 }
 
