--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,3 +1,23 @@
+.containerProfile {
+  max-width: 335px;
+  margin: 0 auto;
+  padding: 0 0 20px;
+}
+@media screen and (min-width: 768px) {
+  .containerProfile {
+    max-width: 704px;
+    padding: 0 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .containerProfile {
+    display: grid;
+    grid-template-columns: 520px 1fr;
+    max-width: 1216px;
+    padding: 0 32px;
+  }
+}
 .title {
   color: var(--main-color);
 }
