fixed styles login and register page

--- a/src/components/AddPetForm/AddPetForm.module.css
+++ b/src/components/AddPetForm/AddPetForm.module.css
@@ -1,5 +1,5 @@
 .formContainer {
-  background-color: var(--white-color);
+  background-color: var(--text-color);
 }
 .titleWrapper {
   display: flex;
