--- a/src/components/MobMenu/MobMenu.module.css
+++ b/src/components/MobMenu/MobMenu.module.css
@@ -20,17 +20,16 @@
   padding: 20px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .menu {
     width: 374px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .overlay {
+  .menu {
     display: none;
   }
-
-  .menu {
+  .overlay {
     display: none;
   }
 }
