--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,6 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  background-color: var(--text-color);
   gap: 10px;
 }
 @media (min-width: 768px) {
