--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   padding: 0;
   place-items: center;
   color: var(--black-color);
-  background-color: var(--white-color);
+  background-color: rgb(249, 249, 249);
 }
 
 h1,
