--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -21,12 +21,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 280px;
+  /* min-width: 280px; */
   margin: 0px 20px;
-  min-height: 280px;
+  /* min-height: 280px; */
   color: var(--white-color);
   padding: 10px 20px 20px 20px;
-  /* padding: 60px 20px 50px; */
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   background-color: var(--main-color);
@@ -43,7 +42,7 @@
     padding-top: 0px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    height: 303px;
+    /* height: 303px; */
   }
   /* .content {
     gap: 32px;
@@ -58,7 +57,8 @@
   .home {
     max-width: 1216px;
     max-height: 270px;
-    padding: 0px;
+    /* padding: 0px; */
+    /* padding: 10px 20px 20px 20px; */
   }
 }
 .title {
@@ -80,7 +80,7 @@
   .title {
     font-size: 90px;
     margin-top: 0px;
-    /* margin-bottom: 16px; */
+    margin-bottom: 52px;
     width: 760px;
     height: 174px;
   }
@@ -164,11 +164,12 @@
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@1x.jpg');
     width: 1216px;
-    /* max-height: 384px; */
+    max-height: 384px;
   }
 }
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
   .photo {
     background-image: url('../src/assets/imgs/desktop/home-desk@2x.jpg');
+    max-height: 384px;
   }
 }
