--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -10,12 +10,16 @@
 @media screen and (min-width: 768px) {
   .pageLogin {
     gap: 16px;
+    width: 704px;
+    padding: 0px;
   }
 }
 @media screen and (min-width: 1280px) {
   .pageLogin {
     max-width: 1216px;
     flex-direction: row;
+
+    gap: 32px;
   }
 }
 
