--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -34,7 +34,7 @@
   border-radius: 30px;
   padding: 27px 20px;
 }
-@media screen and (min-width: 768px) and (max-width: 1278.99px) {
+@media screen and (min-width: 768px) {
   .container {
     height: 560px;
     border-radius: 60px;
