--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -10,7 +10,7 @@
 @media screen and (min-width: 768px) {
   .pageLogin {
     gap: 16px;
-    width: 704px;
+    /* width: 704px; */
     padding: 0px;
   }
 }
