--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
   padding: 0 0 20px;
 }
+.title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  color: var(--main-color);
+}
 @media screen and (min-width: 768px) {
   .containerProfile {
     max-width: 704px;
