--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -9,9 +9,9 @@
   text-transform: uppercase;
   width: 100%;
   border: none;
-  transition: backgraund-color 0.3 ease;
+  transition: background-color 0.3s ease;
 }
-@media screen and(min-width: 768px) {
+@media screen and (min-width: 768px) {
   .logoutButton {
     font-size: 16px;
   }
