--- a/src/components/SearchField/SearchField.module.css
+++ b/src/components/SearchField/SearchField.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   border-radius: 30px;
-
   border: 1px solid var(--input-default);
   background-color: var(--white-color);
   width: 100%;
@@ -34,7 +33,9 @@
   padding: 0;
   margin-right: 10px;
 }
-
+form input:first-child {
+  margin-top: 0px;
+}
 .input::placeholder {
   font-size: 14px;
   font-weight: 400;
