--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -15,8 +15,10 @@
 }
 
 .noFound {
+  margin: 0 auto;
   font-size: 16px;
-  color: var(--black-color);
+  font-weight: 700;
+  color: var(--red-color);
 }
 
 @media screen and (min-width: 768px) {
