--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -26,14 +26,14 @@
 }
 .text,
 .date,
-.link {
+.linkMore {
   font-size: 14px;
   font-weight: 500;
 }
 @media screen and (min-width: 768px) {
   .text,
   .date,
-  .link {
+  .linkMore {
     font-size: 16px;
   }
 }
@@ -51,7 +51,7 @@
 .date {
   color: rgba(38, 38, 38, 0.5);
 }
-.link {
+.linkMore {
   color: var(--main-color);
   text-decoration: underline;
 }
