--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -73,6 +73,11 @@
   font-size: 14px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
+.resetButton:hover,
+.resetButton:focus {
+  background-color: var(--dark-hover);
+  color: var(--white-color);
+}
 /* _____________________ */
 .row {
   display: grid;
