--- a/src/components/LogoutButton/LogoutButton.module.css
+++ b/src/components/LogoutButton/LogoutButton.module.css
@@ -1,4 +1,4 @@
-/* .logoutButton {
+.logoutButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,40 +11,32 @@
   border: none;
   transition: background-color 0.3s ease;
 }
+
 @media screen and (min-width: 768px) {
   .logoutButton {
     font-size: 16px;
   }
 }
-.authNav .logoutButton {
+
+.logoutButtonDefault {
   background-color: var(--main-color);
   color: var(--white-color);
-  border: 1px solid rgb(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
-.authNavHome .logoutButton {
+
+.logoutButtonHome {
   background-color: var(--main-light);
   color: var(--main-color);
   border: none;
 }
+
 .logoutButton:hover,
 .logoutButton:focus {
   background-color: var(--dark-hover);
   border-color: var(--white-color);
 }
-.authNav .logoutButton:hover,
-.authNav .logoutButton:focus {
+
+.logoutButtonDefault:hover,
+.logoutButtonDefault:focus {
   background-color: var(--hover-light);
-} */
-
-.authNav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  background-color: var(--main-color);
-  border-radius: 10px;
-}
-
-.authNavHome {
-  background-color: var(--main-light);
 }
