--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -4,22 +4,29 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
 .modalOverlay:hover {
   cursor: pointer;
 }
 .modalContainer {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* position: relative; */
+  padding: 10px;
   min-width: 320px;
   border-radius: 30px;
   min-height: 394px;
+  max-width: 473px;
   overflow-x: auto;
-  background-color: #ffffff;
+  text-align: center;
+  background-color: var(--white-color);
 }
 
 .modalBtn {
