--- a/src/components/NoticesFilters/NoticesFilters.module.css
+++ b/src/components/NoticesFilters/NoticesFilters.module.css
@@ -68,6 +68,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  color: var(--white-color);
   background-color: var(--main-color);
   max-width: 180px;
   font-size: 14px;
@@ -76,7 +77,7 @@
 .resetButton:hover,
 .resetButton:focus {
   background-color: var(--dark-hover);
-  color: var(--white-color);
+  color: var(--black-color);
 }
 /* _____________________ */
 .row {
