--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -7,7 +7,7 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
-  color: var(--main-color);
+  color: var(--black-color);
 }
 @media screen and (min-width: 768px) {
   .containerProfile {
