--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -22,3 +22,21 @@
     height: 24px;
   }
 }
+.userBarContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.userName {
+  display: block;
+  font-size: 16px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 18px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 22px;
+  }
+}
