--- a/src/components/UserCard/UserBlock/UserBlock.module.css
+++ b/src/components/UserCard/UserBlock/UserBlock.module.css
@@ -1,5 +1,7 @@
 .userBlockWrapper {
   margin-bottom: 40px;
+  border: 2px solid var(--black-color);
+  background-color: var(--main-color);
 }
 
 .userAvatarWrapper {
@@ -73,14 +75,16 @@
 
 .userInfoInputsWrapper {
   display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 14px;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .userInfoInputsWrapper {
     grid-template-columns: 1fr 1fr;
     gap: 14px;
   }
-}
+} */
 
 @media screen and (min-width: 1280px) {
   .userInfoInputsWrapper {
@@ -92,12 +96,15 @@
 .userInfoFormInput {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.28571;
+  line-height: 1.2;
   color: var(--black-color);
   padding: 12px;
   border-radius: 30px;
   border: var(--main-color);
   background-color: transparent;
+  /* margin-bottom: 10px; */
+}
+.userInfoFormInput:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -106,6 +113,9 @@
     font-size: 16px;
     line-height: 1.25;
     padding: 16px;
+    margin-bottom: 0;
+  }
+  .userInfoFormInput:not(:last-child) {
     margin-bottom: 0;
   }
 }
