--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -1,3 +1,24 @@
+/* .list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+@media screen and (min-width: 580px) {
+  .list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+
+@media screen and (min-width: 1110px) {
+  .list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
+    row-gap: 40px;
+  }
+} */
 .list {
   display: grid;
   grid-template-columns: 1fr;
@@ -18,4 +39,13 @@
     gap: 32px;
     row-gap: 40px;
   }
+}
+/* style favorite */
+.profileList {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+/* styles viewed */
+.viewedList {
+  grid-template-columns: repeat(3, 1fr);
 }
