--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -1,50 +1,53 @@
-.logoutButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 30px;
-  padding: 15px 20px;
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-  width: 100%;
-  border: none;
-  transition: background-color 0.3s ease;
-}
-@media screen and (min-width: 768px) {
-  .logoutButton {
-    font-size: 16px;
-  }
-}
-.authNav .logoutButton {
-  background-color: var(--main-color);
-  color: var(--white-color);
-  border: 1px solid rgb(255, 255, 255, 0.5);
-}
-.authNavHome .logoutButton {
-  background-color: var(--main-light);
-  color: var(--main-color);
-  border: none;
-}
-.logoutButton:hover,
-.logoutButton:focus {
-  background-color: var(--dark-hover);
-  border-color: var(--white-color);
-}
-.authNav .logoutButton:hover,
-.authNav .logoutButton:focus {
-  background-color: var(--hover-light);
-}
-
 .authNav {
   display: flex;
   align-items: center;
+  justify-content: center;
   justify-content: space-between;
-  padding: 10px 20px;
-  background-color: var(--main-color);
-  border-radius: 10px;
+  padding: 15px 20px;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  .authNav {
+    margin-left: 100px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .authNav {
+      margin-left: 30px;
+    }
+  }
 }
 
 .authNavHome {
   background-color: var(--main-light);
+}
+
+.logoutButtonContainer {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .logoutButtonContainer {
+    display: block;
+  }
+}
+
+.userName {
+  display: block;
+  font-size: 16px;
+  color: var(--back-color);
+}
+@media screen and (min-width: 768px) {
+  .userName {
+    font-size: 18px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .userName {
+      font-size: 20px;
+    }
+  }
 }
