--- a/src/components/ModalEditUser/ModalEditUser.module.css
+++ b/src/components/ModalEditUser/ModalEditUser.module.css
@@ -1,4 +1,4 @@
-/* .userBigIcon {
+.userBigIcon {
   width: 40px;
   height: 40px;
 }
@@ -15,12 +15,51 @@
     width: 50px;
     height: 50px;
   }
-} */
-
-.modalEditUserWrap {
-  padding: 40px 20px;
 }
-
+.uploadButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  padding: 5px 8px;
+  gap: 10px;
+  color: var(--black-color);
+  width: 127px;
+  height: 36px;
+  background-color: var(--main-light);
+  font-size: 12px;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+.uploadButton:hover {
+  background-color: var(--hover-light);
+}
+@media screen and (min-width: 768px) {
+  .uploadButton {
+    padding: 10px 15px;
+    font-size: 14px;
+    width: 166px;
+    height: 42px;
+  }
+}
+.uploadTitle {
+  white-space: nowrap;
+}
+.cloudIcon {
+  width: 18px;
+  height: 18px;
+}
+@media screen and (min-width: 768px) {
+  .cloudIcon {
+    width: 24px;
+    height: 24px;
+  }
+  .modalEditUserWrap {
+    padding: 40px 20px;
+  }
+}
 @media screen and (min-width: 768px) {
   .modalEditUserWrap {
     padding: 50px;
@@ -31,7 +70,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
-  color: var(--main-color);
+  color: var(--black-color);
   margin-bottom: 20px;
 }
 
