--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -36,7 +36,7 @@
 }
 
 .homeNav a.menuItem {
-  color: var(--color-white);
+  color: var(--white-color);
 }
 
 .homeNav .menuItem:hover,
@@ -45,9 +45,9 @@
   border-color: var(--color-white);
 }
 
-.otherNav .menuItem {
+/* .otherNav .menuItem {
   color: var(--color-black);
-}
+} */
 
 .otherNav .menuItem:hover,
 .otherNav .menuItem:focus,
