--- a/src/components/PetBlock/PetBlock.module.css
+++ b/src/components/PetBlock/PetBlock.module.css
@@ -1,7 +1,9 @@
 .petBlockWrapper {
+  background-color: var(--text-color);
   display: flex;
   flex-direction: column;
   margin-bottom: 40px;
+  border: 2px solid red;
 }
 
 @media screen and (min-width: 768px) {
@@ -23,11 +25,16 @@
     line-height: 1.3;
   }
 }
-
+.containerButton {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 24px;
+}
 .ButnAdd {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.28571;
+  font-size: 12px;
+  line-height: 1.2;
   letter-spacing: -0.03em;
   color: var(--white-color);
   padding: 10px 16px;
@@ -52,26 +59,27 @@
     width: 118px;
   }
 }
-/* ________________________________________________deleted */
+/* ________________________________________________*/
 .logoutBtn {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: -0.03em;
   text-transform: uppercase;
-  color: var(--white-color);
+  color: var(--main-color);
   border-radius: 30px;
   padding: 12px;
   width: 114px;
   display: flex;
   justify-content: center;
-  background-color: var(--red-color);
-  margin: 0;
+  background-color: var(--hover-light);
+  margin-top: 40px;
   transition: background-color 0.3s ease-in-out;
 }
 
 .logoutBtn:hover {
-  background-color: var(--dark-hover);
+  color: var(--white-color);
+  background-color: var(--main-color);
 }
 
 @media screen and (min-width: 768px) {
