--- a/src/components/UserBlock/UserBlock.module.css
+++ b/src/components/UserBlock/UserBlock.module.css
@@ -1,7 +1,7 @@
 .userBlockWrapper {
   margin-bottom: 40px;
-  border: 2px solid var(--black-color);
-  background-color: var(--main-color);
+  border: 2px solid red;
+  background-color: var(--white-color);
 }
 
 .userAvatarWrapper {
@@ -32,9 +32,11 @@
 }
 
 .userAvatarBtn {
+  display: flex;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.3;
+  margin: 0 auto;
   text-decoration: underline;
   color: var(--main-color);
   background-color: transparent;
@@ -49,7 +51,7 @@
 @media screen and (min-width: 768px) {
   .userAvatarBtn {
     font-size: 14px;
-    line-height: 1.28571;
+    line-height: 1.3;
   }
 }
 
@@ -74,24 +76,24 @@
 }
 
 .userInfoInputsWrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  min-width: 280px;
+  display: flex;
+  flex-direction: column;
   gap: 14px;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .userInfoInputsWrapper {
-    grid-template-columns: 1fr 1fr;
     gap: 14px;
   }
-} */
+}
 
-@media screen and (min-width: 1280px) {
+/* @media screen and (min-width: 1280px) {
   .userInfoInputsWrapper {
     grid-template-columns: 1fr;
     gap: 14px;
   }
-}
+} */
 
 .userInfoFormInput {
   font-weight: 500;
@@ -100,7 +102,7 @@
   color: var(--black-color);
   padding: 12px;
   border-radius: 30px;
-  border: var(--main-color);
+  border: 1px solid var(--border-color);
   background-color: transparent;
   /* margin-bottom: 10px; */
 }
