--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -1,6 +1,9 @@
 .userCardWrapper {
+  background-color: var(--text-color);
   padding: 18px 20px 40px;
   border-radius: 30px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
   background-color: var(--white-color);
 }
 
@@ -38,13 +41,13 @@
   align-items: center;
   border-radius: 30px;
   padding: 10px 14px;
-  color: var(--white-color);
-  width: 52px;
+  color: var(--main-color);
+  /* width: 52px; */
   font-weight: 500;
   font-size: 14px;
   line-height: 1.28571;
   letter-spacing: -0.02em;
-  background-color: var(--main-color);
+  background-color: var(--hover-light);
 }
 
 .userCardEditButton {
