--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -38,7 +38,8 @@
 .userName {
   display: block;
   font-size: 16px;
-  color: var(--back-color);
+  color: red;
+  font-weight: 700;
 }
 @media screen and (min-width: 768px) {
   .userName {
