--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,17 @@
 }
 
 body {
+  min-width: 320px;
+  min-height: 100vh;
+  margin: 0 auto;
+  width: 100%;
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
   /* height: 100hv; */
   font-size: 16px;
   font-style: normal;
-  margin: 0;
   padding: 0;
-  place-items: center;
+  /* place-items: center; */
   color: var(--black-color);
   background-color: rgb(249, 249, 249);
 }
