--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url(../../assets/imgs/mobile/main-mob@1x.jpg);
+  background-image: url(../src/assets/imgs/mobile/main-mob@1x.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,31 +13,31 @@
 
 @media only screen and (min-width: 320px) and (min-resolution: 192dpi) {
   .container {
-    background-image: url(../../assets/imgs/mobile/main-mob@2x.jpg);
+    background-image: url(../src/assets/imgs/mobile/main-mob@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    background-image: url(../../assets/imgs/tablet/main-tablet@1x.jpg);
+    background-image: url(../src/assets/imgs/tablet/main-tablet@1x.jpg);
   }
 }
 
 @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .container {
-    background-image: url(../../assets/imgs/tablet/main-tablet@2x.jpg);
+    background-image: url(../src/assets/imgs/tablet/main-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
-    background-image: url(../../assets/imgs/desktop/main-desk@1x.jpg);
+    background-image: url(../src/assets/imgs/desktop/main-desk@1x.jpg);
   }
 }
 
 @media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
   .container {
-    background-image: url(../../assets/imgs/desktop/main-desk@2x.jpg);
+    background-image: url(../src/assets/imgs/desktop/main-desk@2x.jpg);
   }
 }
 
