--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -1,8 +1,8 @@
 .authNav {
   display: flex;
   align-items: center;
-  justify-content: center;
-  justify-content: space-between;
+  /* justify-content: center; */
+  /* justify-content: space-between; */
   padding: 15px 20px;
   border-radius: 30px;
   font-size: 14px;
@@ -25,30 +25,12 @@
   display: none;
 }
 
-.logoutButtonContainer {
+.menuList {
   display: none;
 }
 
-@media screen and (min-width: 1280px) {
-  .logoutButtonContainer {
-    display: block;
-  }
-}
-
-.userName {
-  display: block;
-  font-size: 16px;
-  color: red;
-  font-weight: 700;
-}
 @media screen and (min-width: 768px) {
-  .userName {
-    font-size: 18px;
-  }
-
-  @media screen and (min-width: 1024px) {
-    .userName {
-      font-size: 20px;
-    }
+  .menuList {
+    display: block;
   }
 }
